[gd_scene load_steps=4 format=3 uid="uid://4dqwjtvb1gve"]

[ext_resource type="Script" uid="uid://dpn3c51dlpkut" path="res://Player/player_laser.gd" id="1_6jnck"]
[ext_resource type="Texture2D" uid="uid://c2oio2liu3qoe" path="res://Assets/missile_placeholder.png" id="2_ge2j6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_sbrsl"]

[node name="PlayerLaser" type="Node2D"]
script = ExtResource("1_6jnck")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_sbrsl")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ge2j6")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(0.8, 0.3)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
